refactor: 빈 리스트 emptyList를 사용해 반환